--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.2.1",
     "@reduxjs/toolkit": "^2.5.0",
     "classnames": "^2.5.1",
