--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-pull-to-refresh": "^2.0.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "rickmortyapi": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
